# tuner-libs

./: .gitignore  CHANGELOG.md  Cargo.toml
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: cents.rs  frequency.rs  lib.rs  note.rs  tuning.rs
core/tests/: parity_note_mapping.rs
dsp/: Cargo.toml
dsp/src/: audio.rs  interpolate.rs  lib.rs  nsdf.rs  peak_detection.rs  pitch_detector.rs  preprocess.rs  smoothing.rs
dsp/tests/: pitch_detector_smoke.rs
scripts/: check-no-legacy-names.sh  check-workspace.sh
web-bridge/: Cargo.toml
web-bridge/src/: lib.rs
web-bridge/tests/: api_contract.rs
