[package]
name = "tuner-dsp"
version = "0.1.0"
edition = "2024"

[features]
# Platform selection:
# - native-audio (default): enables CPAL-based capture via dsp::audio.
# - web-audio: excludes native capture and keeps pitch-detection DSP available for web hosts.
# `web-audio` is a compatibility marker and can coexist with `native-audio`
# when workspace-wide `--all-features` checks unify feature sets.
default = ["native-audio"]
native-audio = ["dep:cpal"]
web-audio = []

[dependencies]
tuner-core = { path = "../core" }
cpal = { version = "0.15", optional = true }
