[package]
name = "tuner-web-bridge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tuner-core = { path = "../core" }
tuner-dsp = { path = "../dsp", default-features = false, features = ["web-audio"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
